Bug 360731, Back and Forward buttons on mouse no longer work, also Bug 330938, r=emaijala, sr=roc